added some style shit... didnt know what im doing

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,6 +1,7 @@
 // @import url('https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap%27');
 @import "./variables";
 @import "./headerBar";
+@import "./mediaList";
 
 .App {
     text-align: center;
