--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -1,8 +1,7 @@
-
 $backgroundColor: #313131;
 
 $headerBackgroundColor: #272640;
-$headerHeight: 5em;
+$headerHeight: 100px;
 $headerBottomColor:#4EF4FF;
 $headerBottomWidth: 0,5em;
 $fontHeaderColor: #e3e3e3;
@@ -11,6 +10,3 @@ $favBarWidth: 10em;
 $favBarColor: #f0f3bd;
 
 $threadHeaderSize: 40px;
-
-
-
