_signUp.scss modified, signUp.jsx modified

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -2,6 +2,7 @@
 @import "./variables";
 @import "./headerBar";
 @import "./mediaSpotlightList";
+@import "./signUp";
 
 .App {
     text-align: center;
