--- a/src/assets/css/_mediaSpotlightList.scss
+++ b/src/assets/css/_mediaSpotlightList.scss
@@ -111,6 +111,10 @@
                 margin-left: 10px;
                 padding: 0;
                 text-align: left;
+                >span {
+                    display: block;
+                    padding: 2px;
+                }
             }
         }
     }
