--- a/src/assets/css/_headerBar.scss
+++ b/src/assets/css/_headerBar.scss
@@ -26,3 +26,140 @@ nav{
         bottom: 0;
     }
 }
+body {
+    margin: 0;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+  
+  :root {
+    --bg-accent: #484a4d;
+    --nav-size: 60px;
+    --border: 1px solid #474a4d;
+    --border-radius: 8px;
+    --speed: 500ms; 
+  }
+  
+  ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  a {
+    color: $fontHeaderColor;
+    text-decoration: none;;
+  }
+  
+  /* Top Navigation Bar */
+  
+  /* <nav> */
+  .navbar {
+    height: var(--nav-size);
+    background-color: $headerBackgroundColor;
+    padding: 0 1rem;
+    border-bottom: var(--border);
+  }
+  
+  /* <ul> */
+  .navbar-nav {
+    max-width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: flex-end;
+  }
+  
+  /* <li> */
+  .nav-item {
+    width: calc(var(--nav-size) * 0.8);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  /* Icon Button */
+  .icon-button {
+    --button-size: calc(var(--nav-size) * 0.5);
+    width: var(--button-size);
+    height: var(--button-size);
+    border-radius: 50%;
+    //padding: 5px;
+    //margin: 2px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: filter 300ms;
+  }
+  
+  .icon-button:hover {
+    filter: brightness(1.2);
+  }
+
+  .icon-button:active {
+    background-color: #51505e;
+  }
+  
+  .icon-button svg { 
+    fill: white;
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+  }
+  
+  .leftside {
+    display: flex;
+    justify-content: flex-start;
+  }
+  
+  .leftside h1{
+    display: flex;
+    color: white;
+    align-items: center;
+    margin-right: 100px;
+  }
+  
+  .leftNavigation {
+    position: absolute;
+    top: 60px;
+    width: 200px;
+    height: 1000px;
+    transform: translateX(+33%);
+    background-color: $headerBackgroundColor;
+    border: var(--border);
+    padding: 1rem;
+    /*overflow: hidden;*/
+    transition: height var(--speed) ease;
+    margin-left: 0;
+  }
+  .leftNavs-enter {
+    
+    transform: translateX(-700%) ;
+    
+  }
+  .leftNavs-enter-active {
+    transform: translateX(0%);
+    transition: 200ms;
+    
+  }
+  
+  .leftNavs-exit {
+    transform: translateX(0%);
+  }
+  .leftNavs-exit-active {
+    transform: translateX(-700%);
+    transition: 200ms;
+    
+  }
+  .leftNavs {
+    transition: 200ms;
+  }
+  .toggleLink {
+    display: flex;
+    align-items: center;
+    margin-left: 8px;
+    padding-right: auto;
+    height: 40px;
+  }
+  .toggleLink:hover {
+    background-color: #2f2e4d;
+  }
