commit für robin (usermanagement)

--- a/src/assets/css/_signUp.scss
+++ b/src/assets/css/_signUp.scss
@@ -11,6 +11,63 @@ label{
   color: #FFFFFF;
 }
 
-button{
+.adminPanel {
+  width: 90%;
+  margin: 0 auto;
 
+    .head {
+      padding: 25px;
+      background-color: #454545;
+      box-shadow: 5px 5px #07070798;
+      display: flex;
+      justify-content: space-between;
+      height: 0px;
+      align-items: center;
+
+    }
+  
+}
+
+
+table {
+  width: 100%;
+
+}
+
+.user-preview {
+  margin-top: 15px;
+  padding: 25px;
+  height: 15px;
+  background-color: #454545;
+  box-shadow: 5px 5px #07070798;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  }
+
+.user-preview:hover {
+  filter: brightness(1.2);
+}
+
+// .userAttribute {
+//   max-width: 55%;
+//   display: flex;
+//   justify-content: flex-start;
+// }
+
+.adminPanel h2 {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.deleteButton {
+  color: #622e2e;
+  filter: brightness(1.2);
+}
+.icon-button:hover {
+  filter: brightness(1.2);
+}
+
+.icon-button:active {
+  background-color: #51505e;
 }
