not working rating an cooment

--- a/src/assets/css/_mediumDetails.scss
+++ b/src/assets/css/_mediumDetails.scss
@@ -89,4 +89,14 @@
     padding: 15px;
     text-align: left;
   }
+  .showButton{
+    display: inline-block;
+  }
+
+  .formTextarea{
+    width: 55em;
+    height: 5em;
+  }
 }
+
+
