--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -6,6 +6,10 @@ $headerBottomColor:#4EF4FF;
 $headerBottomWidth: 0,5em;
 $fontHeaderColor: #e3e3e3;
 
+$buttonColor: #00A8E8;
+$buttonHoverColor: #0085b9;
+$buttonPressedColor: #054964;
+
 $favBarWidth: 10em;
 $favBarColor: #f0f3bd;
 
