# _headerBar.scss -/ font family moved to app.scss # _mediaSpotlightList.scss -/ formatting fixed # App.js -/ logout.jsx added for the routing # app.scss -/ main font Arial replaced to 'Reem Kufi' # decodeJWT.js added -/ decoding the java web token for storing data like "id" and "email" in the sessionStorage # headerBar.jsx fixed # login.jsx -/ decoding of JWT added and session storage fixed # package.json -/ dependency for "jwt-decode" in version 3.1.2 added # package-lock.json -/ dependency "authentication-service" deleted # searchBar.jsx fixed -/ still without any function # useFetch.jsx -/ extended function: token-transmission for logged entity available (important for logged entity) # userList.jsx deleted # userPanel.jsx -/ fetch customized; fetches id from currently logged user # userPreview.jsx -/ extended function: token-transmission for logged entity available (important for logged entity)

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap%27");
 @import "./variables";
 @import "./headerBar";
 @import "./mediaSpotlightList";
@@ -33,7 +34,7 @@ body {
   background-color: $backgroundColor;
   margin: 0;
   * {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Reem Kufi', sans-serif;
   }
 }
 
@@ -49,6 +50,7 @@ body {
   text-decoration: none;
   color: white;
   transition: ease-in-out 0.2s;
+  padding: 5px;
 
   &:hover {
     color: $headerBottomColor !important;
