--- a/src/assets/css/_headerBar.scss
+++ b/src/assets/css/_headerBar.scss
@@ -1,10 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Reem+Kufi&display=swap%27");
 @import "./variables";
 
 nav{
     grid-area: header;
     padding: 1em;
-    font-family: 'Reem Kufi', sans-serif;
     color: $fontHeaderColor;
     display: flex;
     flex-direction: row;
@@ -68,6 +66,7 @@ body {
     display: flex;
     justify-content: flex-end;
   }
+
 
   /* <li> */
   .nav-item {
@@ -161,4 +160,8 @@ body {
   }
   .toggleLink:hover {
     background-color: #2f2e4d;
+  }
+
+  .right {
+    float: right;
   }
