--- a/src/assets/css/_mediaSpotlightList.scss
+++ b/src/assets/css/_mediaSpotlightList.scss
@@ -103,7 +103,8 @@
             grid-area: previewContent;
 
             .title {
-                margin-bottom: 10px;
+                margin-top: 7px;
+                margin-bottom: 1px;
                 text-align: left;
             }
 
