--- a/src/assets/css/_signUp.scss
+++ b/src/assets/css/_signUp.scss
@@ -78,7 +78,11 @@ label{
 
 .signUpButton:hover {
   filter: brightness(1.2);
+  background: #6d2e2e;
 }
+
+
+
 
 .genderChoiceField {
   min-width: 99%;
