--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -4,6 +4,8 @@
 @import "./signUp";
 @import "./mediumDetails";
 @import "./accordion";
+@import "./login";
+@import "./changeUserData";
 
 
 .App {
