--- a/src/assets/css/_headerBar.scss
+++ b/src/assets/css/_headerBar.scss
@@ -66,7 +66,7 @@ body {
     max-width: 100%;
     height: 100%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space between;
   }
 
   /* <li> */
@@ -109,7 +109,31 @@ body {
   .leftside {
     display: flex;
     justify-content: flex-start;
-    margin-right: 550px;
+    //margin-right: 650px;
+  }
+
+  .searchBar {
+    display: flex;
+    flex-direction: row;
+    //padding: 0 15% 0 15%;
+    //max-width: 30%;
+    justify-content: center;
+    
+    
+  }
+
+  .visually-hidden {
+    display: flex;
+    flex-direction: row;
+    padding: 5px;
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+
   }
 
   .leftside h1{
@@ -161,9 +185,21 @@ body {
     height: 40px;
   }
   .toggleLink:hover {
-    background-color: #2f2e4d;
+    background-color: #719fb1;
   }
 
-  .logoutText {
-    margin: 0 10px 0 675px;
+  .submitButton {
+    background: #43a3e4;
+    color: white;
+    cursor: pointer;
+  }
+
+  .submitButton:hover {
+    background: #424169;
+  }
+
+  #header-search {
+    width:330px;
+    padding: 5px;
+    margin: 0 1px 0 3px;
   }
