added collection lists to detail view and toggle bar

--- a/src/assets/css/_mediumDetails.scss
+++ b/src/assets/css/_mediumDetails.scss
@@ -70,9 +70,16 @@
       flex-wrap: wrap;
       flex-grow: 1;
       justify-content: space-evenly;
+      position: relative;
 
       .detailField {
         margin-right: auto;
+      }
+
+      .heading {
+        position: absolute;
+        top: 15px;
+        left: 15px;
       }
     }
 
