added parts to make subComments --> still not working

--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -98,6 +98,10 @@ Button:hover {
   
 }
 
+.editAndReplyButton:hover{
+  background-color: $buttonHoverColor
+}
+
 form button:active {
   background-color: $buttonPressedColor;
 }
