--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -56,6 +56,7 @@ body {
   color: white;
   transition: ease-in-out 0.2s;
   padding: 5px;
+  cursor: pointer;
 
   &:hover {
     color: $headerBottomColor !important;
