--- a/src/assets/css/_mediumDetails.scss
+++ b/src/assets/css/_mediumDetails.scss
@@ -130,5 +130,28 @@
     width: 100%;
   }
 
+  .MuiButtonBase-root.MuiButton-root.MuiButton-text {
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+  }
+
+  .titleWithEdit {
+    display: flex;
+    width:100%;
+    justify-content: space-between;
+  }
+
+  #Layer_1 {
+    fill: white;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+  }
+
+  .EditSeasonIcon {
+    display: flex;
+    justify-content: flex-end;
+  }
   
 }
