--- a/src/assets/css/_changeUserData.scss
+++ b/src/assets/css/_changeUserData.scss
@@ -34,6 +34,16 @@
     background: #272640;
     color: white;
     cursor: pointer;
+    transition: ease-in-out .2s all;
+
+    &.disabled {
+        background-color: grey;
+        cursor: initial;
+
+        &:hover {
+            background-color: grey;
+        }
+    }
   }
 
   .changeButton:hover {
