--- a/src/assets/css/_headerBar.scss
+++ b/src/assets/css/_headerBar.scss
@@ -75,6 +75,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
   }
 
   /* Icon Button */
